bug fixed and create google signup option and create reply comment option